style.css
body{
    font-size: 2vw;
}
a{
    color: white;
    text-decoration: none;
    text-align: center;
}

.fächerListe{

  width: 20vw;
  height: 20vw;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  border-radius: 50%;
  border: none;
  margin: 5vw;

}

#Gastein{
  background-image: url(./image/gastein1.jpg);
background-size:22vw;
}
#Prag{
  background-image: url(./image/prag1.jpg);
  background-size: 36vw;
}
#Wachau{
  background-image: url(./image/wachau1.jpg);
  background-size: 36vw;
}
#Lyon{
  background-image: url(./image/lyon1.jpg);
    background-size: 36vw;
}
#Madrid{
  background-image: url(./image/madrid1.jpg);
  background-size: 36vw;
}
#LosAngeles{
  background-image: url(./image/losangeles1.jpg);
  background-size: 32vw;
}
#Barcelona{
  background-image: url(./image/barcelona1.jpg);
  background-size: 28vw;
}
#London{
  background-image: url(./image/london1.jpg);
  background-size: 42vw;
}
#Berlin{
  background-image: url(./image/berlin1.jpg);
    background-size:44vw;
}
#Pacific-coast{
  background-image: url(./image/pacific1.jpg);
    background-size:34vw;
}
#Warnemuende{
  background-image: url(./image/warnemuende1.jpg);
  background-size:34vw;
}
#SanFrancisco{
  background-image: url(./image/sanfrancisco1.jpg);
  background-size: 36vw;
}
#NewYork{
background-image: url(./image/nyc1.jpg);
  background-size: 36vw;
}
#Schwerin{
background-image: url(./image/schwerin1.jpg);
  background-size: 44vw;
}

#start{
  background-color: #27408b;
  background: radial-gradient(circle at bottom right, #fff 20%,  #27408b 94%);
}

.Fotos{
  margin: 0.5vw;
  width: 30vw;
  height: 20vw;
}
.Unterseiten{

  background-repeat: no-repeat;
  background-color: #9790A4;
  background: radial-gradient(circle at bottom left, #9790A4 20%, #fff 104%);

}

